# inspy-hep

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
examples/: example_1.ipynb  weinberg_coauthors.csv
src/inspy-hep/: __init__.py  author.py  inspires_tools.py
src/inspyhep/: __init__.py  author.py  author_tools.py  inspire_tools.py  inspires_tools.py  institution_tools.py  literature_tools.py  metadata.py  scripts.py
