[metadata]
name = inspyhep
authors = [
	{ name="Matheus Hostert", email="mhostert@pitp.ca"},
	]

author_email = "mhostert@pitp.ca"
version = attr: inspyhep.__version__
license = "MIT"
description = A simplified Python interface to your Inspire-HEP statistics.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mhostert/inspy-hep
classifiers =
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
zip_safe = False
package_dir = 
	=src

packages = find:

python_requires = >=3.8.0

install_requires =
	requests
	numpy
    pylatexenc
    click
    Sphinx
    coverage
    awscli
    flake8
    python-dotenv>=0.5.1

[options.packages.find]
where = src

[options.package_data]
* = 
	examples/*

DarkNews = py.typed

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    tox>=3.24

[options.entry_points]
console_scripts =
	inspyhep = inspyhep.scripts:inspyhep